🐛 fix theme-contrasting buttons with outline modifier applied

--- a/src/base/06_buttons.css
+++ b/src/base/06_buttons.css
@@ -91,10 +91,14 @@
         --button-base: hsl(0deg 0% 100%);
         --button-base--hover: hsl(0deg 0% 90.2%);
 
-        &:not(
-            :where(.outline, [data-variant~="outline"], ):where(
-                :not(:hover, :active, :focus-visible)
-              )
+        &:not(:where(.outline, [data-variant~="outline"])) {
+          --button-color: hsl(210deg 10.3% 22.7%);
+        }
+
+        &:where(.outline, [data-variant~="outline"]):where(
+            :hover,
+            :active,
+            :focus-visible
           ) {
           --button-color: hsl(210deg 10.3% 22.7%);
         }
